--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -44,19 +44,14 @@ jobs:
         run: |
           cp dist/dashboard-linux-arm-7 dist/dashboard-linux-arm
 
-      - name: Log in to the GHCR
-        uses: docker/login-action@master
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Log in to the AliyunCS
+
+      - name: Log in to the huawei
         uses: docker/login-action@master
         with:
-          registry: registry.cn-shanghai.aliyuncs.com
-          username: ${{ secrets.ALI_USER }}
-          password: ${{ secrets.ALI_PAT }}
+          registry: swr.ap-southeast-1.myhuaweicloud.com
+          username: ap-southeast-1@K5TCBIJC8Z2RIIJ6BLEC
+          password: a6b9fb8bf99dfcc056399880320162a3788a8952c4f780998a02a401f587aa9e
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
